parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    BARN
    BEGIN
    BIGGEST
    BIGGESTEQ
    BIGGSMALLEQ
    BREAK
    CIRCUMFLEX
    CLASS
    CLOSEKEY
    COMMENT
    COMMENTMULTI
    DIFF
    DIV
    DO
    DOUBLEBAR
    DOUBLEE
    ELSIF
    EXCLAMATION
    EXPO
    FALSE
    FOR
    ID_CLASS
    ID_GLOBAL
    ID_INSTANCE
    IN
    LSHIFT
    MINUS
    MODULE
    NAME
    NEGATION
    NEW
    NIL
    NOT
    OPENKEY
    OR
    PLUS
    POINTRANGE
    PONTO
    REST
    RSHIFT
    SELF
    SIMPLEBAR
    SIMPLEE
    SMALL
    SMALLEQ
    SUPER
    TIMES
    TRIPLEEQ
    TRUE
    WHILE

Grammar

Rule 0     S' -> program
Rule 1     program -> funcdecl
Rule 2     program -> funcdecl program
Rule 3     program -> stm
Rule 4     program -> stm program
Rule 5     program -> call
Rule 6     funcdecl -> signature body
Rule 7     signature -> DEF ID
Rule 8     body -> stms END
Rule 9     stms -> stm
Rule 10    stms -> stm stms
Rule 11    stm -> exp
Rule 12    stm -> exp PONTOVIRGULA
Rule 13    stm -> s
Rule 14    s -> s1
Rule 15    s -> s2
Rule 16    s1 -> stms
Rule 17    s1 -> IF LPAREN exp RPAREN s1 ELSE s1
Rule 18    s1 -> IF LPAREN exp RPAREN body ELSE body
Rule 19    s1 -> IF LPAREN exp RPAREN s1 ELSE body
Rule 20    s1 -> IF LPAREN exp RPAREN body ELSE s1
Rule 21    s2 -> IF LPAREN exp RPAREN s1 ELSE s1
Rule 22    s1 -> IF LPAREN exp RPAREN body
Rule 23    s1 -> IF LPAREN exp RPAREN s1 ELSE s2
Rule 24    s1 -> IF LPAREN exp RPAREN body ELSE s2
Rule 25    s1 -> IF LPAREN exp RPAREN THEN s1 ELSE s1
Rule 26    s1 -> IF LPAREN exp RPAREN THEN body ELSE body
Rule 27    s1 -> IF LPAREN exp RPAREN THEN s1 ELSE body
Rule 28    s1 -> IF LPAREN exp RPAREN THEN body ELSE s1
Rule 29    s2 -> IF LPAREN exp RPAREN THEN s1 ELSE s1
Rule 30    s1 -> IF LPAREN exp RPAREN THEN body
Rule 31    s1 -> IF LPAREN exp RPAREN THEN s1 ELSE s2
Rule 32    s1 -> IF LPAREN exp RPAREN THEN body ELSE s2
Rule 33    s1 -> IF exp s1 ELSE s1
Rule 34    s1 -> IF exp body ELSE body
Rule 35    s1 -> IF exp s1 ELSE body
Rule 36    s1 -> IF exp body ELSE s1
Rule 37    s2 -> IF exp s1 ELSE s1
Rule 38    s1 -> IF exp body
Rule 39    s1 -> IF exp body ELSE s2
Rule 40    s1 -> IF exp THEN s1 ELSE s1
Rule 41    s1 -> IF exp THEN body ELSE body
Rule 42    s1 -> IF exp THEN s1 ELSE body
Rule 43    s1 -> IF exp THEN body ELSE s1
Rule 44    s2 -> IF exp THEN s2 ELSE s2
Rule 45    s1 -> IF exp THEN body
Rule 46    s1 -> IF exp THEN s1 ELSE s2
Rule 47    s1 -> IF exp THEN body ELSE s2
Rule 48    stm -> RETURN exp
Rule 49    stm -> RETURN exp PONTOVIRGULA
Rule 50    exp -> call
Rule 51    exp -> assign
Rule 52    exp -> NUMBER
Rule 53    exp -> STRING
Rule 54    exp -> ID
Rule 55    exp -> exp DOUBLEEQUAL exp
Rule 56    assign -> ID EQ exp
Rule 57    call -> ID LPAREN params RPAREN
Rule 58    call -> ID LPAREN RPAREN
Rule 59    params -> exp VIRGULA params
Rule 60    params -> exp

Terminals, with rules where they appear

AND                  : 
BARN                 : 
BEGIN                : 
BIGGEST              : 
BIGGESTEQ            : 
BIGGSMALLEQ          : 
BREAK                : 
CIRCUMFLEX           : 
CLASS                : 
CLOSEKEY             : 
COMMENT              : 
COMMENTMULTI         : 
DEF                  : 7
DIFF                 : 
DIV                  : 
DO                   : 
DOUBLEBAR            : 
DOUBLEE              : 
DOUBLEEQUAL          : 55
ELSE                 : 17 18 19 20 21 23 24 25 26 27 28 29 31 32 33 34 35 36 37 39 40 41 42 43 44 46 47
ELSIF                : 
END                  : 8
EQ                   : 56
EXCLAMATION          : 
EXPO                 : 
FALSE                : 
FOR                  : 
ID                   : 7 54 56 57 58
ID_CLASS             : 
ID_GLOBAL            : 
ID_INSTANCE          : 
IF                   : 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47
IN                   : 
LPAREN               : 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 57 58
LSHIFT               : 
MINUS                : 
MODULE               : 
NAME                 : 
NEGATION             : 
NEW                  : 
NIL                  : 
NOT                  : 
NUMBER               : 52
OPENKEY              : 
OR                   : 
PLUS                 : 
POINTRANGE           : 
PONTO                : 
PONTOVIRGULA         : 12 49
REST                 : 
RETURN               : 48 49
RPAREN               : 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 57 58
RSHIFT               : 
SELF                 : 
SIMPLEBAR            : 
SIMPLEE              : 
SMALL                : 
SMALLEQ              : 
STRING               : 53
SUPER                : 
THEN                 : 25 26 27 28 29 30 31 32 40 41 42 43 44 45 46 47
TIMES                : 
TRIPLEEQ             : 
TRUE                 : 
VIRGULA              : 59
WHILE                : 
error                : 

Nonterminals, with rules where they appear

assign               : 51
body                 : 6 18 18 19 20 22 24 26 26 27 28 30 32 34 34 35 36 38 39 41 41 42 43 45 47
call                 : 5 50
exp                  : 11 12 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 55 55 56 59 60
funcdecl             : 1 2
params               : 57 59
program              : 2 4 0
s                    : 13
s1                   : 14 17 17 19 20 21 21 23 25 25 27 28 29 29 31 33 33 35 36 37 37 40 40 42 43 46
s2                   : 15 23 24 31 32 39 44 44 46 47
signature            : 6
stm                  : 3 4 9 10
stms                 : 8 10 16

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . funcdecl
    (2) program -> . funcdecl program
    (3) program -> . stm
    (4) program -> . stm program
    (5) program -> . call
    (6) funcdecl -> . signature body
    (11) stm -> . exp
    (12) stm -> . exp PONTOVIRGULA
    (13) stm -> . s
    (48) stm -> . RETURN exp
    (49) stm -> . RETURN exp PONTOVIRGULA
    (57) call -> . ID LPAREN params RPAREN
    (58) call -> . ID LPAREN RPAREN
    (7) signature -> . DEF ID
    (50) exp -> . call
    (51) exp -> . assign
    (52) exp -> . NUMBER
    (53) exp -> . STRING
    (54) exp -> . ID
    (55) exp -> . exp DOUBLEEQUAL exp
    (14) s -> . s1
    (15) s -> . s2
    (56) assign -> . ID EQ exp
    (16) s1 -> . stms
    (17) s1 -> . IF LPAREN exp RPAREN s1 ELSE s1
    (18) s1 -> . IF LPAREN exp RPAREN body ELSE body
    (19) s1 -> . IF LPAREN exp RPAREN s1 ELSE body
    (20) s1 -> . IF LPAREN exp RPAREN body ELSE s1
    (22) s1 -> . IF LPAREN exp RPAREN body
    (23) s1 -> . IF LPAREN exp RPAREN s1 ELSE s2
    (24) s1 -> . IF LPAREN exp RPAREN body ELSE s2
    (25) s1 -> . IF LPAREN exp RPAREN THEN s1 ELSE s1
    (26) s1 -> . IF LPAREN exp RPAREN THEN body ELSE body
    (27) s1 -> . IF LPAREN exp RPAREN THEN s1 ELSE body
    (28) s1 -> . IF LPAREN exp RPAREN THEN body ELSE s1
    (30) s1 -> . IF LPAREN exp RPAREN THEN body
    (31) s1 -> . IF LPAREN exp RPAREN THEN s1 ELSE s2
    (32) s1 -> . IF LPAREN exp RPAREN THEN body ELSE s2
    (33) s1 -> . IF exp s1 ELSE s1
    (34) s1 -> . IF exp body ELSE body
    (35) s1 -> . IF exp s1 ELSE body
    (36) s1 -> . IF exp body ELSE s1
    (38) s1 -> . IF exp body
    (39) s1 -> . IF exp body ELSE s2
    (40) s1 -> . IF exp THEN s1 ELSE s1
    (41) s1 -> . IF exp THEN body ELSE body
    (42) s1 -> . IF exp THEN s1 ELSE body
    (43) s1 -> . IF exp THEN body ELSE s1
    (45) s1 -> . IF exp THEN body
    (46) s1 -> . IF exp THEN s1 ELSE s2
    (47) s1 -> . IF exp THEN body ELSE s2
    (21) s2 -> . IF LPAREN exp RPAREN s1 ELSE s1
    (29) s2 -> . IF LPAREN exp RPAREN THEN s1 ELSE s1
    (37) s2 -> . IF exp s1 ELSE s1
    (44) s2 -> . IF exp THEN s2 ELSE s2
    (9) stms -> . stm
    (10) stms -> . stm stms

    RETURN          shift and go to state 8
    ID              shift and go to state 9
    DEF             shift and go to state 10
    NUMBER          shift and go to state 12
    STRING          shift and go to state 13
    IF              shift and go to state 17

    program                        shift and go to state 1
    funcdecl                       shift and go to state 2
    stm                            shift and go to state 3
    call                           shift and go to state 4
    signature                      shift and go to state 5
    exp                            shift and go to state 6
    s                              shift and go to state 7
    assign                         shift and go to state 11
    s1                             shift and go to state 14
    s2                             shift and go to state 15
    stms                           shift and go to state 16

state 1

    (0) S' -> program .



state 2

    (1) program -> funcdecl .
    (2) program -> funcdecl . program
    (1) program -> . funcdecl
    (2) program -> . funcdecl program
    (3) program -> . stm
    (4) program -> . stm program
    (5) program -> . call
    (6) funcdecl -> . signature body
    (11) stm -> . exp
    (12) stm -> . exp PONTOVIRGULA
    (13) stm -> . s
    (48) stm -> . RETURN exp
    (49) stm -> . RETURN exp PONTOVIRGULA
    (57) call -> . ID LPAREN params RPAREN
    (58) call -> . ID LPAREN RPAREN
    (7) signature -> . DEF ID
    (50) exp -> . call
    (51) exp -> . assign
    (52) exp -> . NUMBER
    (53) exp -> . STRING
    (54) exp -> . ID
    (55) exp -> . exp DOUBLEEQUAL exp
    (14) s -> . s1
    (15) s -> . s2
    (56) assign -> . ID EQ exp
    (16) s1 -> . stms
    (17) s1 -> . IF LPAREN exp RPAREN s1 ELSE s1
    (18) s1 -> . IF LPAREN exp RPAREN body ELSE body
    (19) s1 -> . IF LPAREN exp RPAREN s1 ELSE body
    (20) s1 -> . IF LPAREN exp RPAREN body ELSE s1
    (22) s1 -> . IF LPAREN exp RPAREN body
    (23) s1 -> . IF LPAREN exp RPAREN s1 ELSE s2
    (24) s1 -> . IF LPAREN exp RPAREN body ELSE s2
    (25) s1 -> . IF LPAREN exp RPAREN THEN s1 ELSE s1
    (26) s1 -> . IF LPAREN exp RPAREN THEN body ELSE body
    (27) s1 -> . IF LPAREN exp RPAREN THEN s1 ELSE body
    (28) s1 -> . IF LPAREN exp RPAREN THEN body ELSE s1
    (30) s1 -> . IF LPAREN exp RPAREN THEN body
    (31) s1 -> . IF LPAREN exp RPAREN THEN s1 ELSE s2
    (32) s1 -> . IF LPAREN exp RPAREN THEN body ELSE s2
    (33) s1 -> . IF exp s1 ELSE s1
    (34) s1 -> . IF exp body ELSE body
    (35) s1 -> . IF exp s1 ELSE body
    (36) s1 -> . IF exp body ELSE s1
    (38) s1 -> . IF exp body
    (39) s1 -> . IF exp body ELSE s2
    (40) s1 -> . IF exp THEN s1 ELSE s1
    (41) s1 -> . IF exp THEN body ELSE body
    (42) s1 -> . IF exp THEN s1 ELSE body
    (43) s1 -> . IF exp THEN body ELSE s1
    (45) s1 -> . IF exp THEN body
    (46) s1 -> . IF exp THEN s1 ELSE s2
    (47) s1 -> . IF exp THEN body ELSE s2
    (21) s2 -> . IF LPAREN exp RPAREN s1 ELSE s1
    (29) s2 -> . IF LPAREN exp RPAREN THEN s1 ELSE s1
    (37) s2 -> . IF exp s1 ELSE s1
    (44) s2 -> . IF exp THEN s2 ELSE s2
    (9) stms -> . stm
    (10) stms -> . stm stms

    $end            reduce using rule 1 (program -> funcdecl .)
    RETURN          shift and go to state 8
    ID              shift and go to state 9
    DEF             shift and go to state 10
    NUMBER          shift and go to state 12
    STRING          shift and go to state 13
    IF              shift and go to state 17

    funcdecl                       shift and go to state 2
    program                        shift and go to state 18
    stm                            shift and go to state 3
    call                           shift and go to state 4
    signature                      shift and go to state 5
    exp                            shift and go to state 6
    s                              shift and go to state 7
    assign                         shift and go to state 11
    s1                             shift and go to state 14
    s2                             shift and go to state 15
    stms                           shift and go to state 16

state 3

    (3) program -> stm .
    (4) program -> stm . program
    (9) stms -> stm .
    (10) stms -> stm . stms
    (1) program -> . funcdecl
    (2) program -> . funcdecl program
    (3) program -> . stm
    (4) program -> . stm program
    (5) program -> . call
    (9) stms -> . stm
    (10) stms -> . stm stms
    (6) funcdecl -> . signature body
    (11) stm -> . exp
    (12) stm -> . exp PONTOVIRGULA
    (13) stm -> . s
    (48) stm -> . RETURN exp
    (49) stm -> . RETURN exp PONTOVIRGULA
    (57) call -> . ID LPAREN params RPAREN
    (58) call -> . ID LPAREN RPAREN
    (7) signature -> . DEF ID
    (50) exp -> . call
    (51) exp -> . assign
    (52) exp -> . NUMBER
    (53) exp -> . STRING
    (54) exp -> . ID
    (55) exp -> . exp DOUBLEEQUAL exp
    (14) s -> . s1
    (15) s -> . s2
    (56) assign -> . ID EQ exp
    (16) s1 -> . stms
    (17) s1 -> . IF LPAREN exp RPAREN s1 ELSE s1
    (18) s1 -> . IF LPAREN exp RPAREN body ELSE body
    (19) s1 -> . IF LPAREN exp RPAREN s1 ELSE body
    (20) s1 -> . IF LPAREN exp RPAREN body ELSE s1
    (22) s1 -> . IF LPAREN exp RPAREN body
    (23) s1 -> . IF LPAREN exp RPAREN s1 ELSE s2
    (24) s1 -> . IF LPAREN exp RPAREN body ELSE s2
    (25) s1 -> . IF LPAREN exp RPAREN THEN s1 ELSE s1
    (26) s1 -> . IF LPAREN exp RPAREN THEN body ELSE body
    (27) s1 -> . IF LPAREN exp RPAREN THEN s1 ELSE body
    (28) s1 -> . IF LPAREN exp RPAREN THEN body ELSE s1
    (30) s1 -> . IF LPAREN exp RPAREN THEN body
    (31) s1 -> . IF LPAREN exp RPAREN THEN s1 ELSE s2
    (32) s1 -> . IF LPAREN exp RPAREN THEN body ELSE s2
    (33) s1 -> . IF exp s1 ELSE s1
    (34) s1 -> . IF exp body ELSE body
    (35) s1 -> . IF exp s1 ELSE body
    (36) s1 -> . IF exp body ELSE s1
    (38) s1 -> . IF exp body
    (39) s1 -> . IF exp body ELSE s2
    (40) s1 -> . IF exp THEN s1 ELSE s1
    (41) s1 -> . IF exp THEN body ELSE body
    (42) s1 -> . IF exp THEN s1 ELSE body
    (43) s1 -> . IF exp THEN body ELSE s1
    (45) s1 -> . IF exp THEN body
    (46) s1 -> . IF exp THEN s1 ELSE s2
    (47) s1 -> . IF exp THEN body ELSE s2
    (21) s2 -> . IF LPAREN exp RPAREN s1 ELSE s1
    (29) s2 -> . IF LPAREN exp RPAREN THEN s1 ELSE s1
    (37) s2 -> . IF exp s1 ELSE s1
    (44) s2 -> . IF exp THEN s2 ELSE s2

  ! reduce/reduce conflict for $end resolved using rule 3 (program -> stm .)
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for DEF resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for IF resolved as shift
    $end            reduce using rule 3 (program -> stm .)
    RETURN          shift and go to state 8
    ID              shift and go to state 9
    DEF             shift and go to state 10
    NUMBER          shift and go to state 12
    STRING          shift and go to state 13
    IF              shift and go to state 17

  ! RETURN          [ reduce using rule 9 (stms -> stm .) ]
  ! ID              [ reduce using rule 9 (stms -> stm .) ]
  ! DEF             [ reduce using rule 9 (stms -> stm .) ]
  ! NUMBER          [ reduce using rule 9 (stms -> stm .) ]
  ! STRING          [ reduce using rule 9 (stms -> stm .) ]
  ! IF              [ reduce using rule 9 (stms -> stm .) ]
  ! $end            [ reduce using rule 9 (stms -> stm .) ]

    stm                            shift and go to state 3
    program                        shift and go to state 19
    stms                           shift and go to state 20
    funcdecl                       shift and go to state 2
    call                           shift and go to state 4
    signature                      shift and go to state 5
    exp                            shift and go to state 6
    s                              shift and go to state 7
    assign                         shift and go to state 11
    s1                             shift and go to state 14
    s2                             shift and go to state 15

state 4

    (5) program -> call .
    (50) exp -> call .

  ! reduce/reduce conflict for $end resolved using rule 5 (program -> call .)
    $end            reduce using rule 5 (program -> call .)
    PONTOVIRGULA    reduce using rule 50 (exp -> call .)
    DOUBLEEQUAL     reduce using rule 50 (exp -> call .)
    RETURN          reduce using rule 50 (exp -> call .)
    ID              reduce using rule 50 (exp -> call .)
    DEF             reduce using rule 50 (exp -> call .)
    NUMBER          reduce using rule 50 (exp -> call .)
    STRING          reduce using rule 50 (exp -> call .)
    IF              reduce using rule 50 (exp -> call .)

  ! $end            [ reduce using rule 50 (exp -> call .) ]


state 5
